# LiveExplorer_Skin

./: CMakeLists.txt  CODE_ANALYSIS.md  LICENSE  PROJECT_DOCS.md  PROJECT_DOCS_NEW.md  README.md  build_and_run.ps1  filemngr_bgimage.cpp  liveexplorer_skin.cpp  verify_build.ps1
src/: Config.cpp  Config.h  Controller.cpp  Controller.h  NativeOverlay.cpp  NativeOverlay.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
